Fix "more" position

--- a/cores-grinder-review/index.html
+++ b/cores-grinder-review/index.html
@@ -113,7 +113,7 @@
       <h2 id="rebiyu">レビュー</h2>
 <p>Cores（コレス）というと<a href="https://cores.coffee/product/c250/">ゴールドフィルター</a>が有名だけど、最近新しい電動ミル「コーングラインダー C330」が発売されたので早速試してみた。
 ちなみにこれまでは Wilfa（ウィルファ） の <a href="https://www.wilfa.co.uk/product/kitchen/black-aroma/">Svart Aroma Coffee Grinder</a> 、その前はメリタの <a href="https://www.melitta.co.jp/products/coffeemill/vario.html">VARIO-E</a> を使っていたので、それらとの比較になる。</p>
-<h2 id="apirupointo">アピールポイント</h2>
+<span id="continue-reading"></span><h2 id="apirupointo">アピールポイント</h2>
 <p>発売前から公式サイトで製品情報が公開されていたので、その説明を読んで興味を持った。ざっくりまとめるとアピールポイントは以下のような感じ。</p>
 <ol>
 <li>コーン式のグラインドユニット</li>
@@ -194,7 +194,7 @@
 <h2 id="jie-lun">結論</h2>
 <p>価格に対するクオリティがすばらしい。デザインも性能もよい。初めての電動ミルとしてこれを買って後悔する人はほぼいないはず。</p>
 <p>ただ、投入量との差、粉受けの静電気問題は自分にとって致命的にストレスで、毎日使えるイメージが湧かなかったので Wilfa に戻ることにする。</p>
-<span id="continue-reading"></span>
+
     </div>
 
     
