Add pour over tips

--- a/cores-grinder-review/index.html
+++ b/cores-grinder-review/index.html
@@ -192,17 +192,16 @@
 <p>フタにこれだけ落ちるということは当然刃にもかなりくっついている。ブラシで触れるとパラパラと落ちてくるし、もう一度空の状態で電源を押しても粉が落ちてくる。</p>
 <p><img src="/img/cores-02.jpeg" alt="cores-02" /></p>
 <h3 id="jing-dian-qi-defen-shou-kenifen-gabitusirihebarituku">静電気で粉受けに粉がびっしりへばりつく</h3>
-<p>自分としてはかなり萎えたポイント。フタを開けてみるとまずフタ側にもくっついている。そして粉受けの側面全体に粉がへばりついていて、量としてもかなり多い。ブラシで集めても静電気でドリッパーに落ちないし、無理に叩いて落としても結局静電気で散らばる。</p>
+<p>自分としてはかなり萎えたポイント。フタを開けてみるとまずフタ側にもくっついている。そして粉受けの側面全体に粉がへばりついていて、量としてもかなり多い。ブラシで集めても静電気でドリッパーに落ちないし、無理に叩いて落としても結局静電気で散らばる。また、ミル刃についている量も多く感じた。</p>
 <p><img src="/img/cores-03.jpeg" alt="cores-03" /></p>
 <p><img src="/img/cores-04.jpeg" alt="cores-04" /></p>
 <h3 id="tou-ru-liang-tochu-tekuruliang-nochai-ga-0-6g">投入量と出てくる量の差が 0.6g</h3>
-<p>これが一番致命的だった。投入した 16.5g に対して、粉受けからドリッパーに移したときの量が 15.9g だった。驚きの差、0.6g。本体に残っている粉、刃にくっついている粉、粉受けのフタにこぼれた粉、粉受けの側面にくっついている粉などが考えられ、それぞれ丁寧にかき集めればロスは減らせるだろうけど、毎日何度も使うものなので面倒なことはしたくない。</p>
-<p>どの製品を使っても多少は本体内に残留してしまうのは構造上仕方ないにしても Cores は平均的な残留量よりも多いと感じた。</p>
+<p><strong>[Updated: 2020/03/22]</strong> これについては Wilfa もほぼ同量（何度か試して 0.5g）の差が出ることがわかったので、Cores だけ特別差が大きいというわけではなかった。きちんと確認せず書いて申し訳ない。どの製品を使っても本体内に残留してしまうのは構造上仕方ないという結果。</p>
 <h3 id="an-quan-zhuang-zhi-ganai">安全装置がない</h3>
 <p>粉受けをセットしない状態でも電源を入れると動作してしまう。Wilfa はそのあたりしっかりしてて、ちゃんとカチッと音がするまで押し込まないと動作しない。</p>
 <h2 id="jie-lun">結論</h2>
 <p>価格に対するクオリティがすばらしい。デザインも性能もよい。初めての電動ミルとしてこれを買って後悔する人はほぼいないはず。</p>
-<p>ただ、投入量との差、粉受けの静電気問題は自分にとって致命的にストレスで、毎日使えるイメージが湧かなかったので Wilfa に戻ることにする。</p>
+<p>ただ、粉受けの静電気問題は自分にとって致命的にストレスで、毎日使えるイメージが湧かなかったので Wilfa に戻ることにする。</p>
 
     </div>
 
