--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     
     <header class="post__header">
         <h1 class="post__title">
-            <a href="https:&#x2F;&#x2F;blog.endflow.net&#x2F;pouring-tips&#x2F;">ハンドドリップでボディが強く出過ぎる場合の対処方法</a>
+            <a href="https:&#x2F;&#x2F;blog.endflow.net&#x2F;pouring-tips&#x2F;">ハンドドリップでエグみが強く出てしまうときの対処方法</a>
         </h1>
         <div class="post__meta">
             <span class="post__time">2020-03-22</span>
