--- a/pouring-tips/index.html
+++ b/pouring-tips/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - ハンドドリップでボディが強く出過ぎる場合の対処方法</title>
+      <title>blog.endflow.net - ハンドドリップでエグみが強く出てしまうときの対処方法</title>
 
       
 
@@ -110,7 +110,7 @@
     
     <header class="post__header">
         <h1 class="post__title">
-            <a href="https:&#x2F;&#x2F;blog.endflow.net&#x2F;pouring-tips&#x2F;">ハンドドリップでボディが強く出過ぎる場合の対処方法</a>
+            <a href="https:&#x2F;&#x2F;blog.endflow.net&#x2F;pouring-tips&#x2F;">ハンドドリップでエグみが強く出てしまうときの対処方法</a>
         </h1>
         <div class="post__meta">
             <span class="post__time">2020-03-22</span>
