--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     
     <header class="post__header">
         <h1 class="post__title">
-            <a href="https:&#x2F;&#x2F;blog.endflow.net&#x2F;saml-proxy&#x2F;">社内システム向けにSAML用認証プロキシをFargateで立ててVPNを撲滅した話</a>
+            <a href="https:&#x2F;&#x2F;blog.endflow.net&#x2F;saml-proxy&#x2F;">社内システム向けにSAML用認証プロキシをFargateで立ててVPNを撲滅する話</a>
         </h1>
         <div class="post__meta">
             <span class="post__time">2020-04-13</span>
