--- a/iced-coffee-20/index.html
+++ b/iced-coffee-20/index.html
@@ -125,14 +125,7 @@
 <p>今回は思い立ったらすぐに手軽に作れるアイスコーヒーのレシピを書こうと思う。</p>
 <span id="continue-reading"></span><h2 id="aisukohinozheng-ti">アイスコーヒーの正体</h2>
 <p>お店の人に聞いてみるとケニア カンゴチョの豆を使ってコールドブリューで作っていて、浅煎り特有の酸味を丸くするためにきび砂糖を加えているとのこと。</p>
-<p>自分は浅煎りの豆が好きで、その豆の個性を余すことなく味わおうとしたら正直なところホット以外の選択肢がなかった。その理由は 2 つある。</p>
-<ol>
-<li>人の味覚は温度に依存しすぎる</li>
-<li>お湯でないと抽出されない成分がある</li>
-</ol>
-<p>真夏でも最初の 1 杯はコールドブリューを選ぶとしても必ずドリップを注文している。それくらいアイスコーヒーは味がわからないし味が出ていない。</p>
-<p>だけどフグレンのレシピは目指している完成形が違っていた。「ボディがあって甘みもある冷たいコーヒー」をホットの延長線上で作るのではなく、
-理想とする味に素直に近づけた感じがある（ちょっと何言ってるかわからない）。</p>
+<p><img src="/img/iced-coffee-01.jpeg" alt="iced-coffee-01" /></p>
 <p>ちなみにフグレンのコールドブリューは豆が日替わりのようなので、気に入ったら豆を買いつつ、お店の人にレシピを聞くのが良さそう。</p>
 <h2 id="resipi">レシピ</h2>
 <p>本題のレシピを紹介する。コールドブリューだとすぐに作れないので氷で急冷するタイプのアイスコーヒーにした。</p>
@@ -167,21 +160,35 @@
 <h2 id="gan-xiang">感想</h2>
 <p>いろいろ試行錯誤してわかったことは、</p>
 <ol>
-<li>画一的なアイスコーヒーのレシピは存在しない</li>
-<li>ホットを冷やしたものはアイスコーヒーではない</li>
+<li>バカにせずに砂糖を入れろ</li>
+<li>万能なアイスコーヒーのレシピは存在しない</li>
 </ol>
-<p>1 つ目はいろいろ失敗した結果得られたもの。ホットのノリでドリップするとことごとく失敗する。</p>
-<p>アイスコーヒーは豆にかなり依存するので、豆が変わったら上記レシピのまま使えない可能性が高い。
+<p>1 つ目は大きな収穫。これまで変なこだわりで砂糖は入れてなかったけど、貪欲に理想の味を追求していくべきだな、と思った。
+あとやはりこういう目的できび砂糖はベストだと思う。実際、自分はスコーンのレシピでも必ずきび砂糖にしていたので。</p>
+<p>2 つ目は当たり前と言えば当たり前なんだけど、これまで自分がアイスコーヒーを本気で作っていなかったことに起因する。
+ホットと同じでベースとしてのレシピは存在するけど、微調整することで恐ろしく美味しく仕上がるということは驚きだった。</p>
+<p>また、アイスコーヒーは豆にかなり依存するので、豆が変わったら上記レシピはそのまま使えない可能性が高い。
 特にカンゴチョはウォッシュトなのですっきりした後味を作ることに成功しているけど、ナチュラルだと確実にダメ。
-これは新しくレシピを考えないといけない。というよりどういう味を目指すのか考えるのが先。</p>
-<p>2 つ目は自分への戒めのようなもの。これまでアイスコーヒーを本気で作ったことがなかった。でも追求しはじめると本当に面白い分野なのでもっとレシピ作っていきたい。</p>
-<p>ぜひ作ってみてください！って言おうと思ったけど、カンゴチョは売り切れになってる・・・。まだお店にはあるかもしれないのでぜひ行ってみてほしい。
+重要なのは手元にあるレシピでありのままに淹れるのではなく、アイスのナチュラルの場合、どういう味を理想とするのかをまず考える必要がある。</p>
+<p>ぜひ作ってみてください！って言おうと思ったけど、カンゴチョは売り切れになってる・・・。まだお店にはあるかもしれないのでぜひ寄ってみてほしい。
 カンゴチョじゃなくてもウォッシュトであれば近いものは作れると思う。</p>
 <h2 id="can-kao-wen-xian">参考文献</h2>
 <ul>
-<li>Tim の本: https://fuglencoffee.jp/products/coffeewithtimwendelboe</li>
-<li>Tim Wendelboe の動画: https://www.youtube.com/watch?v=WAP4qUGs-f8</li>
-<li>KENYA / AA KANGOCHO（売り切れ）: https://fuglencoffee.jp/products/aakangocho</li>
+<li><a href="https://fuglencoffee.jp/products/coffeewithtimwendelboe">Tim Wendelboe の著書</a>
+<ul>
+<li>フグレントウキョウの店舗にも置いてある</li>
+</ul>
+</li>
+<li><a href="https://www.youtube.com/watch?v=WAP4qUGs-f8">Tim Wendelboe によるアイスコーヒーの作り方</a>
+<ul>
+<li>氷を直接入れず、アイシングすることで味が薄まるのを防いでいる</li>
+</ul>
+</li>
+<li><a href="https://fuglencoffee.jp/products/aakangocho">KENYA / AA KANGOCHO</a>
+<ul>
+<li>記事書いてから気付いた・・・</li>
+</ul>
+</li>
 </ul>
 
     </div>
