--- a/cores-grinder-review/index.html
+++ b/cores-grinder-review/index.html
@@ -154,13 +154,11 @@
 <p>これは人によって評価分かれそうだけど、自分は Wilfa よりも Cores の方が耳障りな音が小さいと感じた。YouTube に比較用の短い動画をアップロードしてみたので聞いてみてほしい。豆は入れず、空回しした動作音となっている。</p>
 <p><strong>Cores CONE GRINDER C330</strong></p>
 <div >
-    <iframe src="https://www.youtube.com/embed/_K1UARle8pM" webkitallowfullscreen mozallowfullscreen allowfullscreen>
-    </iframe>
+    <iframe src="https://www.youtube.com/embed/_K1UARle8pM" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 <p><strong>Wilfa Svart Aroma Coffee Grinder</strong></p>
 <div >
-    <iframe src="https://www.youtube.com/embed/oCEtpedID8k" webkitallowfullscreen mozallowfullscreen allowfullscreen>
-    </iframe>
+    <iframe src="https://www.youtube.com/embed/oCEtpedID8k" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 <h3 id="jia-ge-noan-sa">価格の安さ</h3>
 <p>定価 2 万円というのはかなりお買い得だと思った。デザインのクオリティが高いので 3 万円でも全然買う。ここから少し値下がりすると、価格性能比で競合がいない気がする。</p>
