--- a/build-conditional-query/index.html
+++ b/build-conditional-query/index.html
@@ -124,14 +124,14 @@
 <h2 id="yaritaikoto">やりたいこと</h2>
 <p>数字の ID でも文字列の slug でも１つの関数で検索できるようにしたい。</p>
 <pre style="background-color:#282828;">
-<span style="color:#fa5c4b;">pub enum </span><span style="color:#8ec07c;">IdOrSlug </span><span style="color:#fdf4c1aa;">{
+<code><span style="color:#fa5c4b;">pub enum </span><span style="color:#8ec07c;">IdOrSlug </span><span style="color:#fdf4c1aa;">{
     Id(</span><span style="color:#fa5c4b;">i32</span><span style="color:#fdf4c1aa;">),
     Slug(</span><span style="color:#fabd2f;">String</span><span style="color:#fdf4c1aa;">),
 }
 
 </span><span style="font-style:italic;color:#928374;">// ...
 
-</span><span style="color:#fa5c4b;">pub fn </span><span style="color:#8ec07c;">find</span><span style="color:#fdf4c1aa;">(..., </span><span style="color:#fdf4c1;">id</span><span style="color:#fdf4c1aa;">: IdOrSlug) -&gt; Result&lt;Article&gt; {
+</span><span style="color:#fa5c4b;">pub fn </span><span style="color:#8ec07c;">find</span><span style="color:#fdf4c1aa;">(..., </span><span style="color:#fdf4c1;">id</span><span style="color:#fdf4c1aa;">: IdOrSlug) -&gt; </span><span style="color:#fabd2f;">Result</span><span style="color:#fdf4c1aa;">&lt;Article&gt; {
     </span><span style="color:#fa5c4b;">let</span><span style="color:#fdf4c1aa;"> query </span><span style="color:#fe8019;">= </span><span style="color:#fdf4c1aa;">articles::table.</span><span style="color:#fabd2f;">left_join</span><span style="color:#fdf4c1aa;">(categories::table);
     </span><span style="color:#fa5c4b;">let</span><span style="color:#fdf4c1aa;"> query </span><span style="color:#fe8019;">= </span><span style="color:#fa5c4b;">match</span><span style="color:#fdf4c1aa;"> id {
         IdOrSlug::Id(id) </span><span style="color:#fe8019;">=&gt;</span><span style="color:#fdf4c1aa;"> query.</span><span style="color:#fabd2f;">filter</span><span style="color:#fdf4c1aa;">(articles::id.</span><span style="color:#fabd2f;">eq</span><span style="color:#fdf4c1aa;">(id)),
@@ -139,21 +139,21 @@
     };
 
     </span><span style="font-style:italic;color:#928374;">// ...
-</span></pre><h2 id="dametupoi">ダメっぽい</h2>
+</span></code></pre><h2 id="dametupoi">ダメっぽい</h2>
 <p><code>.filter()</code> をかますと引数の型が戻り値の型に埋め込まれるようで、 incompatible だと怒られる。</p>
 <pre style="background-color:#282828;">
-<span style="color:#fdf4c1aa;">match arms have incompatible types
+<code><span style="color:#fdf4c1aa;">match arms have incompatible types
 
 expected struct `schema::articles::columns::id`, found struct `schema::articles::columns::slug`
 
 note: expected type `diesel::query_builder::SelectStatement&lt;_, _, _, diesel::query_builder::where_clause::WhereClause&lt;diesel::expression::operators::Eq&lt;schema::articles::columns::id, diesel::expression::bound::Bound&lt;diesel::sql_types::Integer, i32&gt;&gt;&gt;&gt;`
        found struct `diesel::query_builder::SelectStatement&lt;_, _, _, diesel::query_builder::where_clause::WhereClause&lt;diesel::expression::operators::Eq&lt;schema::articles::columns::slug, diesel::expression::bound::Bound&lt;diesel::sql_types::Text, &amp;str&gt;&gt;&gt;&gt;`
-</span></pre><span id="continue-reading"></span><h2 id="jie-jue-fang-fa">解決方法</h2>
+</span></code></pre><span id="continue-reading"></span><h2 id="jie-jue-fang-fa">解決方法</h2>
 <p><code>.filter()</code> の呼び出しのあとに <code>into_boxed()</code> を使って Box する。</p>
 <pre style="background-color:#282828;">
-<span style="font-style:italic;color:#928374;">// ...
+<code><span style="font-style:italic;color:#928374;">// ...
 
-</span><span style="color:#fa5c4b;">pub fn </span><span style="color:#8ec07c;">find</span><span style="color:#fdf4c1aa;">(..., </span><span style="color:#fdf4c1;">id</span><span style="color:#fdf4c1aa;">: IdOrSlug) -&gt; Result&lt;ViewProduct&gt; {
+</span><span style="color:#fa5c4b;">pub fn </span><span style="color:#8ec07c;">find</span><span style="color:#fdf4c1aa;">(..., </span><span style="color:#fdf4c1;">id</span><span style="color:#fdf4c1aa;">: IdOrSlug) -&gt; </span><span style="color:#fabd2f;">Result</span><span style="color:#fdf4c1aa;">&lt;ViewProduct&gt; {
     </span><span style="color:#fa5c4b;">let</span><span style="color:#fdf4c1aa;"> query </span><span style="color:#fe8019;">= </span><span style="color:#fdf4c1aa;">articles::table.</span><span style="color:#fabd2f;">left_join</span><span style="color:#fdf4c1aa;">(categories::table);
     </span><span style="color:#fa5c4b;">let</span><span style="color:#fdf4c1aa;"> query </span><span style="color:#fe8019;">= </span><span style="color:#fa5c4b;">match</span><span style="color:#fdf4c1aa;"> id {
         IdOrSlug::Id(id) </span><span style="color:#fe8019;">=&gt;</span><span style="color:#fdf4c1aa;"> query.</span><span style="color:#fabd2f;">filter</span><span style="color:#fdf4c1aa;">(articles::id.</span><span style="color:#fabd2f;">eq</span><span style="color:#fdf4c1aa;">(id)).</span><span style="color:#fabd2f;">into_boxed</span><span style="color:#fdf4c1aa;">(),
@@ -161,12 +161,12 @@ note: expected type `diesel::query_builder::SelectStatement&lt;_, _, _, diesel::
     };
 
     </span><span style="font-style:italic;color:#928374;">// ...
-</span></pre><h2 id="wei-jie-jue">未解決</h2>
+</span></code></pre><h2 id="wei-jie-jue">未解決</h2>
 <p>最初は条件部分だけ切り出してやろうとしたんだけど、こっちは何か方法が無いんだろうか。</p>
 <pre style="background-color:#282828;">
-<span style="font-style:italic;color:#928374;">// ...
+<code><span style="font-style:italic;color:#928374;">// ...
 
-</span><span style="color:#fa5c4b;">pub fn </span><span style="color:#8ec07c;">find</span><span style="color:#fdf4c1aa;">(..., </span><span style="color:#fdf4c1;">id</span><span style="color:#fdf4c1aa;">: IdOrSlug) -&gt; Result&lt;Article&gt; {
+</span><span style="color:#fa5c4b;">pub fn </span><span style="color:#8ec07c;">find</span><span style="color:#fdf4c1aa;">(..., </span><span style="color:#fdf4c1;">id</span><span style="color:#fdf4c1aa;">: IdOrSlug) -&gt; </span><span style="color:#fabd2f;">Result</span><span style="color:#fdf4c1aa;">&lt;Article&gt; {
     </span><span style="color:#fa5c4b;">let</span><span style="color:#fdf4c1aa;"> cond </span><span style="color:#fe8019;">= </span><span style="color:#fa5c4b;">match</span><span style="color:#fdf4c1aa;"> id {
         IdOrSlug::Id(id) </span><span style="color:#fe8019;">=&gt; </span><span style="color:#fdf4c1aa;">articles::id.</span><span style="color:#fabd2f;">eq</span><span style="color:#fdf4c1aa;">(id),
         IdOrSlug::Slug(slug) </span><span style="color:#fe8019;">=&gt; </span><span style="color:#fdf4c1aa;">articles::slug.</span><span style="color:#fabd2f;">eq</span><span style="color:#fdf4c1aa;">(slug.</span><span style="color:#fabd2f;">as_str</span><span style="color:#fdf4c1aa;">()),
@@ -176,7 +176,7 @@ note: expected type `diesel::query_builder::SelectStatement&lt;_, _, _, diesel::
     </span><span style="color:#fdf4c1aa;">}
 
     </span><span style="font-style:italic;color:#928374;">// ...
-</span></pre>
+</span></code></pre>
     </div>
 
     
