--- a/pouring-tips/index.html
+++ b/pouring-tips/index.html
@@ -132,12 +132,12 @@
 <h2 id="chu-hui">初回</h2>
 <p><a href="https://mame.coffee/collections/coffee/products/zelelu-filter">Ethiopia Zelelu Ararso / MAME</a> のレシピに従って淹れてみた。</p>
 <pre style="background-color:#282828;">
-<span style="color:#fdf4c1aa;">粉: 15g
+<code><span style="color:#fdf4c1aa;">粉: 15g
 お湯: 225g
 抽出時間: 2分20秒
 湯温: 90度
 挽き目: WilfaでFilterから右に３目盛り
-</span></pre>
+</span></code></pre>
 <p>結果、あまり好みではない味になってしまった。</p>
 <ul>
 <li>エグみが強く出ている</li>
@@ -186,12 +186,12 @@
 <h2 id="ribenzi-sositeyou-sheng">リベンジ、そして優勝</h2>
 <p>Enciso の淹れ方は Zelelu Ararso と同じ。レシピには粉 16g も書いてあるが、それは完全に好みでもう少しボディが欲しいと思ったら試してみて、とのことだった。まずは 15g で淹れてみる。</p>
 <pre style="background-color:#282828;">
-<span style="color:#fdf4c1aa;">粉: 15g
+<code><span style="color:#fdf4c1aa;">粉: 15g
 お湯: 225g
 抽出時間: 2分20秒
 湯温: 90度
 挽き目: WilfaでFilterから右に２目盛り
-</span></pre>
+</span></code></pre>
 <p>前回のドリップ方法から変えた点は以下。</p>
 <ul>
 <li>投入２回目まで撹拌、３回目以降はお湯で撹拌しない</li>
