--- a/pour-over-tips/index.html
+++ b/pour-over-tips/index.html
@@ -169,6 +169,19 @@
 <p>つまり、前述の 2 つの tips で解決できるということ。</p>
 <h2 id="toiukotode">ということで</h2>
 <p>今年も優勝していこうと思います。</p>
+<h2 id="zhui-ji-dou-nojing-zhi-fang-fa-niyoruwei-i">追記: 豆の精製方法による違い</h2>
+<p>未抽出・過抽出は上記のようにお湯の注ぎ方でも差は出てしまうけど、それと同じくらい豆の精製方法によっても左右される。</p>
+<p>ざっくり言うと、ナチュラルは過抽出（ではないケースもあるけど）になりやすく、ウォッシュトは未抽出になりやすい。</p>
+<p>ナチュラルプロセスの豆はその個性的なフレーバーが全面に出やすい傾向にあり、いつも通りにドリップするとクセが強すぎるってパターンがある。</p>
+<p>そういうときはストレートにお湯を注ぐ割合を増やして、ちょうどよい塩梅を探る。それ以外の手軽な方法としては粉の量を減らす。</p>
+<p>一方でウォッシュトはクリーンになりすぎて記載されているフレーバーが感じられない、みたいなこともある。</p>
+<p>こちらは単純に回し入れるだけでは足りないこともあるので、いくつか方法が考えられる。</p>
+<ol>
+<li>抽出前半の湯量を増やす</li>
+<li>90℃ よりもう少し高い温度で抽出</li>
+<li>スプーンで撹拌</li>
+</ol>
+<p>それでも・・・って場合はちょっと落ち着いて少し冷ましてから飲むとフレーバーが感じられることもあるので試してみてほしい。これについては別途記事を書きたい。</p>
 
     </div>
 
